--- a/public/patient-visit/custom.css
+++ b/public/patient-visit/custom.css
@@ -1,19 +1,51 @@
-html,
-body {
-    overflow-x: hidden;
-    /* Prevent scroll on narrow devices */
+/* Style the form */
+#regForm {
+    background-color: #ffffff;
+    margin: 100px auto;
+    padding: 40px;
+    width: 70%;
+    min-width: 300px;
 }
 
-.text-white-50 {
-    color: rgba(255, 255, 255, .5);
+/* Style the input fields */
+input {
+    padding: 10px;
+    width: 100%;
+    font-size: 17px;
+    font-family: Raleway;
+    border: 1px solid #aaaaaa;
 }
 
-.bg-purple {
-    background-color: var(--purple);
+/* Mark input boxes that gets an error on validation: */
+input.invalid {
+    background-color: #ffdddd;
 }
 
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
+/* Hide all steps by default: */
+.tab {
+    display: none;
+}
+
+/* Make circles that indicate the steps of the form: */
+.step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5;
+}
+
+/* Mark the active step: */
+.step.active {
+    opacity: 1;
+}
+
+/* Mark the steps that are finished and valid: */
+.step.finish {
+    background-color: #04AA6D;
 }
 
 textarea {
